--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -4,11 +4,58 @@
 }
 
 .table {
-  border-collapse: collapse;
-  border: 1px solid #000;
+  /* border-collapse: collapse;
+  border: 1px solid #000; */
+  display: flex;
 }
 
-tr, th, td {
-  border: 1px solid #000;
-  padding: 10px;
+.input {
+  width: 80px;
+  padding: 5px;
+  font-size: 16px;
+  margin: 0 2px;
+}
+
+.btn-main {
+  margin-top: 20px;
+}
+
+.btn-add {
+  border: 1px solid rgb(97, 228, 152);
+  background-color: rgb(177, 255, 203);
+}
+
+.btn-remove {
+  border: 1px solid rgb(228, 117, 97);
+  background-color: rgb(255, 189, 177);
+}
+
+.users {
+  margin-bottom: 4px;
+}
+
+.error-input {
+  border: 1px solid red;
+}
+
+.error-text {
+  color: red;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+button {
+  font-size: 16px;
+  padding: 5px;
+  margin: 0 6px;
+  outline: none;
+  border: 1px solid rgb(97, 202, 228);
+  background-color: rgb(177, 239, 255);
+}
+
+button:active {
+  background-color: rgb(97, 202, 228);
 }
