--- a/src/modules/table/table.module.scss
+++ b/src/modules/table/table.module.scss
@@ -1,11 +1,11 @@
-.wrapper {
+.Wrapper {
   margin: 30px auto;
   display: flex;
   flex-direction: column;
   display: inline-block;
 }
 
-.btnLoad {
+.BtnLoad {
   border: 1px solid rgb(160, 228, 97);
   background-color: rgb(215, 255, 177);
 }
