--- a/src/components/text-field/text-field.module.scss
+++ b/src/components/text-field/text-field.module.scss
@@ -1,14 +1,10 @@
-.input {
+.Input {
   width: 120px;
   padding: 5px;
   font-size: 16px;
   margin: 0 2px;
 }
 
-.results {
-  background: rgb(230, 221, 250);
-}
-
-.errorInput {
+.ErrorInput {
   border: 1px solid red;
 }
